--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -12,17 +12,12 @@ and open the template in the editor.
         <footer class="text-center" th:fragment="footer">
             <div class="mb-2">
                 <small>
-                    © 2020 made by - <a target="_blank" rel="noopener noreferrer" href="https://azouaoui.netlify.com">
+                    © 2020 made by - <a target="_blank" rel="noopener noreferrer" href="http://localhost:9090/about/Harshita-Sethi.pdf">
                         Harshita Sethi
                     </a>
                 </small>
-            </div>
-            <div>
-                <a href="https://github.com/azouaoui-med" target="_blank">
-                    <img alt="GitHub followers" src="https://img.shields.io/github/followers/azouaoui-med?label=github&style=social" />
-                </a>
-                <a href="https://twitter.com/azouaoui_med" target="_blank">
-                    <img alt="Twitter Follow" src="https://img.shields.io/twitter/follow/azouaoui_med?label=twitter&style=social" />
+                <a href="https://github.com/HarshitaSethi/Covid-19/tree/master" target="_blank">
+                    <i class="fa fa-github"></i>
                 </a>
             </div>
         </footer>
