--- a/src/main/resources/templates/fragments/statistics.html
+++ b/src/main/resources/templates/fragments/statistics.html
@@ -17,7 +17,7 @@ and open the template in the editor.
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
-        <script th:src="@{/js/statistics.js}"></script>
+        <!--<script th:src="@{/js/statistics.js}"></script>-->
 
     </head>
     <body>
@@ -173,25 +173,25 @@ and open the template in the editor.
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 mt-3">
-                        <h5>Last 10 days statistics</h5>
-                        <hr>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class='buttons'>
-                        <button id='btnTotalVsActive'  class='active'>
-                            Total Cases vs Active Cases
-                        </button>
-                        <button id='btnNewVsRecoveries'>
-                            New Cases vs Recovered vs Deaths
-                        </button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div id="containerBarChart" clas="col-lg-12 col-sm-12"></div>
-                </div>
+                <!--                <div class="row">
+                                    <div class="col-12 mt-3">
+                                        <h5>Last 10 days statistics</h5>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class='buttons'>
+                                        <button id='btnTotalVsActive'  class='active'>
+                                            Total Cases vs Active Cases
+                                        </button>
+                                        <button id='btnNewVsRecoveries'>
+                                            New Cases vs Recovered vs Deaths
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div id="containerBarChart" clas="col-lg-12 col-sm-12"></div>
+                                </div>-->
 
             </section>
         </div>
