--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -83,28 +83,28 @@ and open the template in the editor.
                                 </a>
                             </li>
                             <li class="header-menu">
-                                <span>General</span>
+                                <span>GENERAL</span>
                             </li>
                             <li>
-                                <a href="#statistics">
+                                <a href="#statistics" class="general">
                                     <i class="fa fa-tachometer-alt"></i>
                                     <span>Statistics</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#symptoms">
+                                <a href="#symptoms" class="general">
                                     <i class="fa fa-calendar"></i>
                                     <span>Symptoms</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#dosDonts">
+                                <a href="#dosDonts" class="general">
                                     <i class="fa fa-book"></i>
                                     <span>Do's and Don'ts</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#myths">
+                                <a href="#myths" class="general">
                                     <i class="fa fa-hospital"></i>
                                     <span>Common Myths</span>
                                 </a>
