--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -14,7 +14,8 @@ html {
 
 .parallax {
     /* The image used */
-    background-image: url('http://localhost:9090/COVID/COVID_BACKGROUND.jpg');
+    background-image: url('../images/COVID_BACKGROUND.jpg');
+    /*background-image: url('http://localhost:9090/COVID/COVID_BACKGROUND.jpg');*/
 
     /* Full height */
     height: 60%; 
