menu links active state

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -74,48 +74,49 @@ and open the template in the editor.
                     <div class="sidebar-menu">
                         <ul>
                             <li class="header-menu">
-                                <span>COVID</span>
+                                <span id="covidMenu">COVID</span>
                             </li>
-                            <li>
-                                <a href="../covidSelfAssessment">
+                            <li id="selfAssessmentMenu">
+                                <a href="covidSelfAssessment">
+                                    <!--<a href="../covidSelfAssessment">-->
                                     <i class="fa fa-thermometer-half"></i>
                                     <span>Self Assessment</span>
                                 </a>
                             </li>
                             <li class="header-menu">
-                                <span>GENERAL</span>
+                                <span id="generalMenu">GENERAL</span>
                             </li>
-                            <li>
+                            <li id="statisticsMenu">
                                 <a href="#statistics" class="general">
                                     <i class="fa fa-tachometer-alt"></i>
                                     <span>Statistics</span>
                                 </a>
                             </li>
-                            <li>
+                            <li id="symptomsMenu">
                                 <a href="#symptoms" class="general">
                                     <i class="fa fa-calendar"></i>
                                     <span>Symptoms</span>
                                 </a>
                             </li>
-                            <li>
+                            <li id="dosDontsMenu">
                                 <a href="#dosDonts" class="general">
                                     <i class="fa fa-book"></i>
                                     <span>Do's and Don'ts</span>
                                 </a>
                             </li>
-                            <li>
+                            <li id="mythsMenu">
                                 <a href="#myths" class="general">
                                     <i class="fa fa-hospital"></i>
                                     <span>Common Myths</span>
                                 </a>
                             </li>
-                            <li>
+                            <li id="faqsMenu">
                                 <a href="#faqs">
                                     <i class="fa fa-gem"></i>
                                     <span>FAQs</span>
                                 </a>
                             </li>
-                            <li>
+                            <li id="contactMenu">
                                 <a href="#contact">
                                     <i class="fa fa-globe"></i>
                                     <span>Helpline</span>
