--- a/src/main/resources/templates/fragments/register.html
+++ b/src/main/resources/templates/fragments/register.html
@@ -23,7 +23,7 @@ and open the template in the editor.
                         <div class="row">
                             <div class="col-md-12">
                                 <!-- Tab panes -->
-                                <form role="form" class="form-horizontal" action="../register" method="POST">
+                                <form role="form" class="form-horizontal" action="register" method="POST">
                                     <div class="form-group row">
                                         <label for="name" class="col-sm-2 control-label col-form-label">
                                             Name</label>
